--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Satyajeet
+                        <span class="text-primary">Machale</span>
                     </h1>
                     <div class="subheading mb-5">
                         Kharadi,Pune-411014,Maharashtra,INDIA · (+91) 8668959078 ·
