--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/satyajeet-m-05b048194/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Satyajeet-237"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://twitter.com/SatyajeetMacha1"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/satyajeet.machale/"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.youtube.com/channel/UCE233HSWvY5hSfe5zM9WXtw"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </section>
