--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Kharadi,Pune-411014,Maharashtra,INDIA · (+91) 8668959078 ·
                         <a href="mailto:name@email.com">satyajeet.s.m@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in playing competitive games like Valorant,CSGO and many more.</p>
+                    <p class="lead mb-5">I am an undergraduate at IIT BOMBAY and this webpage showcases some of my interests.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/satyajeet-m-05b048194/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Satyajeet-237"><i class="fab fa-github"></i></a>
@@ -103,20 +103,28 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Indian Institute of Technology, BOMBAY</h3>
+                            <div class="subheading mb-3">Bachelor of Science (B.S.)</div>
+                            <div>Mathematics</div>
+                            <p>GPA: 8.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"> April 2019 - May 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Sri Chaitanya Junior College</h3>
+                            <div class="subheading mb-3">Junior College</div>
+                            <p>GPA: 8.6</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2017 - April 2019</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Pawar Public School</h3>
+                            <div class="subheading mb-3">High School</div>
+                            <p>GPA: 8.87</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2009 - May 2017</span></div>
                     </div>
                 </div>
             </section>
