--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid mountain climber. During the warmer months here in Pune, I enjoy biking, free climbing, and eating Ice-creams.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring gamer, and I spend a large amount of my free time exploring the latest technology advancements in either cybersecurity or gaming tech</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring gamer, and I spend a large amount of my free time exploring the latest technology advancements in either cybersecurity or gaming.</p>
                 </div>
             </section>
             <hr class="m-0" />
