--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                     </div>
                     <p class="lead mb-5">I am an undergraduate at IIT BOMBAY and this webpage showcases some of my interests.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/satyajeet-m-05b048194/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/Satyajeet-237"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://twitter.com/SatyajeetMacha1"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="https://www.facebook.com/satyajeet.machale/"><i class="fab fa-facebook-f"></i></a>
-                        <a class="social-icon" href="https://www.youtube.com/channel/UCE233HSWvY5hSfe5zM9WXtw"><i class="fab fa-youtube"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/satyajeet-m-05b048194/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Satyajeet-237" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/SatyajeetMacha1" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/satyajeet.machale/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.youtube.com/channel/UCE233HSWvY5hSfe5zM9WXtw" target="_blank"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </section>
