--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Kharadi,Pune-411014,Maharashtra,INDIA · (+91) 8668959078 ·
                         <a href="mailto:name@email.com">satyajeet.s.m@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am an undergraduate at IIT BOMBAY and this webpage showcases some of my interests.</p>
+                    <p class="lead mb-5">I am an undergraduate at IIT BOMBAY and this webpage showcases some of my interests and qualifications.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/satyajeet-m-05b048194/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Satyajeet-237" target="_blank"><i class="fab fa-github"></i></a>
