--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <a href="mailto:name@email.com">satyajeet.s.m@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am an undergraduate at IIT BOMBAY and this webpage showcases some of my interests and qualifications.</p>
+                    <p> Here's my resume : <a href="https://drive.google.com/file/d/1Ads5CAK8pllbPly6RlJsL4X_oi9bs8Cm/view?usp=share_link">link</a></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/satyajeet-m-05b048194/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Satyajeet-237" target="_blank"><i class="fab fa-github"></i></a>
