--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Sri Chaitanya Junior College</h3>
+                            <h3 class="mb-0">Sri Chaitanya Junior College , PUNE</h3>
                             <div class="subheading mb-3">Junior College</div>
                             <p>GPA: 8.6</p>
                         </div>
@@ -97,7 +97,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Pawar Public School</h3>
+                            <h3 class="mb-0">Pawar Public School , PUNE</h3>
                             <div class="subheading mb-3">High School</div>
                             <p>GPA: 8.88</p>
                         </div>
